新增 DB View，更新資料模型，新增客戶關聯資料表

--- a/MVC5Homework/MVC5Homework.csproj
+++ b/MVC5Homework/MVC5Homework.csproj
@@ -229,6 +229,9 @@
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\vm客戶關聯資料統計表.cs">
+      <DependentUpon>ClientDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\客戶聯絡人.cs">
       <DependentUpon>ClientDB.tt</DependentUpon>
     </Compile>
@@ -350,6 +353,7 @@
     <Content Include="Views\客戶銀行資訊\Details.cshtml" />
     <Content Include="Views\客戶銀行資訊\Edit.cshtml" />
     <Content Include="Views\客戶銀行資訊\Index.cshtml" />
+    <Content Include="Views\客戶資料\客戶關聯資料表.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
